ipc/ipdl/test/ipdl/error/trans_WrongName.ipdl
protocol trans_WrongName {

child:
    Msg();

state S1:
    call Msg goto S1;

};
